src/components/stable/gux-notification-toast/gux-notification-toast.less
// Variables part
@import (reference) '../../../style/color.less';
@import (reference) '../../../style/shadows.less';

:host {
  position: relative;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-content: stretch;
  align-items: flex-start;
  justify-content: flex-start;
  width: 294px;
  padding: 16px 8px 16px 16px;
  margin-bottom: 4px;
  color: @gux-type;
  background: @gux-grey-90;
  border: 1px solid @gux-grey-30;
  border-color: @gux-grey-30;
  border-radius: 4px;
  .gux-shadow-20();
}

.gux-icon {
  flex: 0 1 auto;
  align-self: auto;
  order: 0;
  margin: 4px;

  ::slotted(gux-icon) {
    width: 24px !important;
    height: 24px !important;
  }

  &.gux-alert {
    color: @gux-alert;
  }

  &.gux-warning {
    color: @gux-warning;
  }

  &.gux-positive {
    color: @gux-positive;
  }

  &.gux-neutral {
    color: @gux-neutral;
  }
}

.gux-content {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  flex-wrap: nowrap;
  align-content: stretch;
  align-items: flex-start;
  align-self: auto;
  justify-content: flex-start;
  order: 0;

  .gux-title {
    flex: 1 1 auto;
    align-self: auto;
    order: 0;
    max-height: 48px;
    margin: 0 12px 0 8px;
    overflow: hidden;
    font-size: 14px;
    line-height: 20px;
    color: @gux-type;
    text-overflow: ellipsis;
  }

  .gux-message {
    flex: 1 1 auto;
    align-self: auto;
    order: 0;
    max-height: 24px;
    margin: 0 12px 0 8px;
    overflow: hidden;
    line-height: 24px;
    text-overflow: ellipsis;
  }
}

